--- a/MudXComponents/_Imports.razor
+++ b/MudXComponents/_Imports.razor
@@ -1,1 +1,10 @@
 @using Microsoft.AspNetCore.Components.Web
+@using Microsoft.AspNetCore.Components.Forms
+@using MudXComponents.Components
+@using MudXComponents.Args
+@using MudXComponents.Enums
+@using MudXComponents.Extensions
+@using MudXComponents.Interfaces
+@using MudBlazor
+@using System.Linq
+@using System.Collections.ObjectModel;
