--- a/MudXExamples/_Imports.razor
+++ b/MudXExamples/_Imports.razor
@@ -9,3 +9,7 @@
 @using MudBlazor
 @using MudXExamples
 @using MudXExamples.Shared
+@using MudXComponents
+@using MudXComponents.Components
+@using MudXComponents.Shared;
+@using MudXComponents.Enums;
