--- a/MudXExamples/Shared/NavMenu.razor
+++ b/MudXExamples/Shared/NavMenu.razor
@@ -1,5 +1,11 @@
 <MudNavMenu>
     <MudNavLink Href="" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Home">Home</MudNavLink>
+
+    <MudNavGroup Title="Grids" Expanded="true">
+        <MudNavLink Href="/Grids/SImpleGrid">SimpleGrid</MudNavLink>
+        @*<MudNavLink Href="/security">Security</MudNavLink>*@
+    </MudNavGroup>
+
     <MudNavLink Href="counter" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Add">Counter</MudNavLink>
     <MudNavLink Href="fetchdata" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.List">Fetch data</MudNavLink>
 </MudNavMenu>
