--- a/MudXExamples/Pages/Grids/SimpleGrid.razor
+++ b/MudXExamples/Pages/Grids/SimpleGrid.razor
@@ -88,6 +88,7 @@
 
     <GridButtons>
         <GridFabButton
+                       Title="Opened in edit mode"
                        PageSize="MaxWidth.ExtraExtraLarge"
                        ViewState="ViewState.Update"
                        Color="Color.Tertiary"
