--- a/MudXComponents.Examples/Pages/Grids/SimpleGrid.razor
+++ b/MudXComponents.Examples/Pages/Grids/SimpleGrid.razor
@@ -99,9 +99,11 @@
     <DetailGrid>
         <MudTabs Class="pt-1 pb-2">
             <MudTabPanel Text="Orders">
-                <OrdersGrid   />
+                <OrdersGrid />
             </MudTabPanel>
-             
+            <MudTabPanel Text="Transactions">
+                <TransactionsGrid />
+            </MudTabPanel>
         </MudTabs>
     </DetailGrid>
 </MudGridX>
