MudSelect TypedInput Conversion Fix

--- a/MudXComponents.Examples/Pages/Grids/TransactionsGrid.razor
+++ b/MudXComponents.Examples/Pages/Grids/TransactionsGrid.razor
@@ -89,6 +89,7 @@
     public Task OnLoadAsync(MudXPage<TRANSACTIONS> frm)
     {
 
+        frm.ViewModel.T_DATE = DateTime.Now.Date;
         return Task.CompletedTask;
     }
 
