--- a/MudXComponents.Examples/Pages/Index.razor
+++ b/MudXComponents.Examples/Pages/Index.razor
@@ -1,10 +1,24 @@
 ﻿@page "/"
-
+@using System.ComponentModel.DataAnnotations;
+@using System.ComponentModel.DataAnnotations.Schema;
 <PageTitle>Index</PageTitle>
 
 <h1>Hello, world!</h1>
 
-Welcome to your new app.
+    Welcome to your new app.
 
 <SurveyPrompt Title="How is Blazor working for you?" />
 
+
+@*<MudTextField T="DateTime" Format="yyyy-MM-dd"   Label="Date" InputType="InputType.Date" Value="@MyDate" />*@
+
+<MudTextField T="DateTime" Format="yyyy-MM-dd" InputType="InputType.Date" Value="@MyDate"   ValueChanged="(DateTime arg) => MyDate=arg" />
+
+
+
+@code{
+    [DataType(DataType.DateTime)]
+    public DateTime MyDate { get; set; }
+
+
+}
