SmartGrid complete, fixed childrow grid size when smartgrid is false

--- a/MudXComponents.Examples/Pages/Grids/OrdersGrid.razor
+++ b/MudXComponents.Examples/Pages/Grids/OrdersGrid.razor
@@ -1,5 +1,7 @@
 ﻿
-<MudGridX EnableModelValidation="true"
+<MudGridX
+         
+          EnableModelValidation="true"
           EnableSearch="true"
           EnablePagination="true"
           OnCreate="@CreateCommand"
