--- a/MudXComponents.Examples/Pages/Grids/SimpleGrid.razor
+++ b/MudXComponents.Examples/Pages/Grids/SimpleGrid.razor
@@ -5,7 +5,7 @@
 @code{}
 
 <MudGridX
-        SmartCrud="true"
+        SmartCrud="false"
         EnableModelValidation="true"
         EnableSearch="true"
         EnablePagination="true"
@@ -15,7 +15,7 @@
         OnLoad="@OnLoad"
         TModel="USERS"
         DataSource="@DataSource"
-        Title="@Title">
+        Title="Im Just a simple grid">
 
     <HeaderButtons >
         <GridFabButton Title="Yeni Kullanici"
@@ -35,50 +35,53 @@
     </HeaderButtons>
 
     <GridColumns>
-        <GridColumn 
-                    BindingType="string"
-                    Order="1" 
+        <GridColumn BindingType="int"
+                    Order="0"
+                    xs="12" sm="12" md="12" lg="12" xl="12" xxl="12"
+                    TModel="USERS"
+                    BindingField="@(nameof(USERS.U_ROWID))"
+                    Label="rowid" />
+
+        <GridColumn BindingType="string"
+                    Order="1"
                     xs="12" sm="12" md="12" lg="5" xl="5" xxl="5"
                     TModel="USERS"
                     BindingField="@(nameof(USERS.U_NAME))"
                     Label="Name" />
 
-        <GridSpacer TModel="USERS" 
-                    Order="2"  
-                    xs="12" sm="12" md="2" lg="2" xl="2" xxl="2"/>
+        <GridSpacer TModel="USERS"
+                    Order="2"
+                    xs="12" sm="12" md="2" lg="2" xl="2" xxl="2" />
 
-        <GridColumn
-            BindingType="string"
-            Order="3"
-            xs="12" sm="12" md="12" lg="5" xl="5" xxl="5"
-            TModel="USERS" BindingField="@(nameof(USERS.U_SURNAME))" Label="Surname" />
-        
-        <GridSelect
-            Class="mt-5"
-            Order="3"
-            xs="12" sm="12" md="12" lg="6" xl="6" xxl="6"
-            TModel="USERS"
-            TSourceModel="COUNTRIES"
-            DataSource="@countries"
-            Dense="true"
-            Placeholder="Seciniz"
-            BindingField="@(nameof(USERS.U_COUNTRY_CODE))"
-            TextField="@(nameof(COUNTRIES.C_CODE))"
-            ValueField="@(nameof(COUNTRIES.C_DESC))"
-            Label="Country" />
-        
-        <GridSpacer TModel="USERS" 
-                    Order="2"  
-                    xs="12" sm="12" md="6" lg="6" xl="6" xxl="6"/>
-        
-        
-       <GridColumn
-                    BindingType="string"
+        <GridColumn BindingType="string"
+                    Order="3"
+                    xs="12" sm="12" md="12" lg="5" xl="5" xxl="5"
+                    TModel="USERS" BindingField="@(nameof(USERS.U_SURNAME))" Label="Surname" />
+
+        <GridSelect Class="mt-5"
+                    Order="3"
+                    xs="12" sm="12" md="12" lg="6" xl="6" xxl="6"
+                    TModel="USERS"
+                    TSourceModel="COUNTRIES"
+                    DataSource="@countries"
+                    Dense="true"
+                    Placeholder="Seciniz"
+                    BindingField="@(nameof(USERS.U_COUNTRY_CODE))"
+                    TextField="@(nameof(COUNTRIES.C_CODE))"
+                    ValueField="@(nameof(COUNTRIES.C_DESC))"
+                    Label="Country" />
+
+        <GridSpacer TModel="USERS"
+                    Order="2"
+                    xs="12" sm="12" md="6" lg="6" xl="6" xxl="6" />
+
+
+        <GridColumn BindingType="string"
                     Order="3"
                     xs="12" sm="12" md="12" lg="12" xl="12" xxl="12"
                     Lines="3"
                     TModel="USERS" BindingField="@(nameof(USERS.U_DESCRIPTION))" Label="Description" />
-        
+
     </GridColumns>
 
     <GridButtons>
@@ -97,7 +100,7 @@
                        TModel="USERS" />
     </GridButtons>
     <DetailGrid>
-        <MudTabs Class="pt-1 pb-2">
+        <MudTabs Class="p-5" Color="Color.Info" Style="width:100%">
             <MudTabPanel Text="Orders">
                 <OrdersGrid />
             </MudTabPanel>
